# wlosd

./: Makefile  README.md  meson.build
data/: wlosd.gresource.xml
data/ui/: wlosd.ui
src/: wlosd-daemon.cpp
